--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  height: 100vh;
   margin: 0 auto;
 }
 
@@ -7,6 +8,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: lightskyblue;
+  height: 100%;
   padding: 20px;
 }
 
@@ -30,6 +32,24 @@ body {
   margin: 40px auto;
 }
 
+.first-button {
+  font-size: 18px;
+  background-color: yellow;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.second-button {
+  font-size: 18px;
+  background-color: rgb(0, 255, 21);
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+}
+
 @media (min-width: 600px) {
   .introduction {
     background-color: lightgreen;
@@ -40,10 +60,26 @@ body {
   .introduction__content {
     background-color: orangered;
   }
+  .first-button {
+    background-color: red;
+  }
+  .second-button {
+    background-color: lightsalmon;
+  }
 }
 
 @media (min-width: 1100px) {
   .introduction {
     background-color: rgb(216, 216, 6);
+  }
+  .introduction__title {
+    color: black;
+    font-style: normal;
+  }
+  .first-button {
+    background-color: aquamarine;
+  }
+  .second-button {
+    background-color: lightseagreen;
   }
 }
