--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
-#root {
-  color: red;
-}
 
-body {
+#root {
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: space-between;
+  align-items: baseline;
 }
 
-div {
+#episode-card {
   margin: 30px 10px;
-  width: 70px;
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-  flex-wrap: wrap;
+  width: 350px;
+}
+
+img {
+  width: 350px;
+}
+
+p {
+  font-size: smaller;
 }
 
